<resources>
  <string name="app_name">伴</string>
  <string name="btn_model_1">新闻头条</string>
  <string name="btn_model_2">微信精选</string>
  <string name="btn_model_3">轻松一刻</string>
  <string name="btn_model_4">星座运势</string>
  <string name="btn_model_5">梦境解析</string>
  <string name="word">文</string>
  <string name="picture">图</string>
  <string name="lucky_index_all">综合运势</string>
  <string name="lucky_index_love">爱情运势</string>
  <string name="lucky_index_work">事业运势</string>
  <string name="lucky_index_money">财富运势</string>
  <string name="lucky_index_health">健康运势</string>
  <string name="lucky_color">幸运颜色</string>
  <string name="lucky_number">幸运数字</string>
  <string name="match_constellation">速配星座</string>
  <string name="no_data">暂无数据，点击刷新</string>
  <string name="title_activity_welcome">WelcomeActivity</string>
</resources>
